# src/api/params.rs
@@ -95,6 +95,7 @@ impl Params {
             races: self.toutes("race"),
             robes: self.toutes("robe"),
             sexes: self.toutes("sexe"),
+            statuts_reproducteur: self.toutes("statut_reproducteur"),
             disciplines: self.toutes("discipline"),
             codes_indice: self.toutes("indice"),
             annees_naissance: self.annees("annee_naissance")?,
@@ -202,6 +203,7 @@ pub const PARAMS_FILTRE: &[&str] = &[
     "race",
     "robe",
     "sexe",
+    "statut_reproducteur",
     "discipline",
     "indice",
     "annee_naissance",
